# PDFDocumentView

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
ai-toolkit/02-governance/: 05-implementation-guardrail.md
cmake/: PDFDocumentViewCPack.cmake  PDFDocumentViewConfig.cmake.in  PDFiumMinimumRevision.cmake  PdfiumPrebuilt.cmake
docs/: concept-pdf-document-view.md  engine-verification.md  legal-integration-checklist.md  off-mac-pdfium-build.md  rendering-threading.md  requirements-traceability-matrix.md  shipped-third-party-notices-pdfium-prebuilt.md  third-party-notices.md  third-party-notices.template.md  tutorial-pdf-document-view.md  widget-coordinate-contract.md
docs/about/: THIRD_PARTY_NOTICES.template.md
docs/adrs/: 0001-pdf-engine-license-and-third-party-notices.md  0002-render-threading-and-tiles-policy.md  0003-split-packages-and-poppler-opt-in.md  0004-public-api-surface-freeze.md
docs/doxygen/: Doxyfile  Doxyfile.in
docs/notices/: pdfium-prebuilt-NOTICES.md
examples/basic/: CMakeLists.txt  main.cpp
include/pdf_document_view/: page_highlight.hpp  page_render_request.hpp  pdf_capabilities.hpp  pdf_document_model.hpp  pdf_document_view_widget.hpp  text_match.hpp
src/: CMakeLists.txt  create_default_pdf_document_model.cpp  create_default_pdf_render_backend.cpp  create_default_pdf_render_backend.hpp  pdf_document_view_widget.cpp  pdf_render_backend.hpp  pdf_tile_cache.hpp  pdf_tile_render_worker.cpp  pdf_tile_render_worker.hpp  pdfium_backend.cpp  pdfium_backend.hpp  pdfium_document_model.cpp  pdfium_document_model.hpp  pdfium_library.cpp  pdfium_library.hpp  pdfium_tile_raster.cpp  pdfium_tile_raster.hpp  poppler_qt_backend.cpp  poppler_qt_backend.hpp  poppler_qt_document_model.cpp  poppler_qt_document_model.hpp  poppler_stub_backend.cpp  poppler_stub_backend.hpp  stub_pdf_document_model.cpp  stub_pdf_document_model.hpp
tests/: CMakeLists.txt  pdf_document_fixture_smoke.cpp  pdf_document_model_smoke.cpp  pdf_document_view_reveal_smoke.cpp  pdf_widget_async_tile_capability_smoke.cpp
tests/cmake_consumer_smoke/: CMakeLists.txt  main.cpp
tests/fixtures/: README.md
tools/: aggregate_pdfium_third_party_notices.py  generate_demo_synthetic_3page_pdf.sh
tools/wbs-dashboard/: README.md  index.html  package-lock.json  package.json
tools/wbs-dashboard/public/: rtm-summary.json  wbs-data.json
tools/wbs-dashboard/src/: App.tsx  wbsUtils.ts
tools/wbs-dashboard/src/components/: FiltersBar.module.css  FiltersBar.tsx  RtmPanel.tsx
